# Automation-send-message-from-whatsapp

./: pyproject.toml
ProjetoBot/: whatsappbot.py
ProjetoBot/Chat_Automation/: app.py
